<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.SignUpActivity"
    android:id="@+id/Layout">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_icon_back"
        android:backgroundTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/signUp_logo_139dp"
        android:layout_height="@dimen/signUp_logo_70dp"
        android:src="@drawable/ic_sign_logo"
        android:contentDescription="@string/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintHorizontal_bias="0.2"
        />
    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="@dimen/signUp_250dp"
        android:layout_height="@dimen/signUp_35dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        android:text="@string/create"
        android:layout_marginTop="@dimen/signUp_28dp"
        android:textColor="@color/quaternary"
        android:textSize="@dimen/signUp_25sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/signUp_270dp"
        android:layout_height="@dimen/signUp_75dp"
        android:hint="@string/name"
        app:boxCornerRadiusBottomStart="@dimen/signUp_12dp"
        app:boxCornerRadiusBottomEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopStart="@dimen/signUp_12dp"
        android:textColorHint="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_signUp"
        app:layout_constraintHorizontal_bias="0.40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signUp_50dp"
            android:fontFamily="@font/roboto_light_italic"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/signUp_270dp"
        android:layout_height="@dimen/signUp_75dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomStart="@dimen/signUp_12dp"
        app:boxCornerRadiusBottomEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopStart="@dimen/signUp_12dp"
        android:textColorHint="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        app:layout_constraintHorizontal_bias="0.40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signUp_50dp"
            android:fontFamily="@font/roboto_light_italic"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/signUp_270dp"
        android:layout_height="@dimen/signUp_60dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomStart="@dimen/signUp_12dp"
        app:boxCornerRadiusBottomEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopEnd="@dimen/signUp_12dp"
        app:boxCornerRadiusTopStart="@dimen/signUp_12dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/icon_hide"
        android:textColorHint="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintHorizontal_bias="0.40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signUp_50dp"
            android:fontFamily="@font/roboto_light_italic"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_characters"
        android:layout_width="@dimen/signUp_250dp"
        android:layout_height="@dimen/main_padding_25dp"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/caracters"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/signUp_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept"
        android:layout_width="@dimen/signUp_270dp"
        android:layout_height="@dimen/signUp_48dp"
        app:layout_constraintTop_toBottomOf="@id/txt_characters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_principal"
        android:text="@string/accept"
        android:enabled="false"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/signUp_20dp"
        app:layout_constraintHorizontal_bias="0.42"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

