<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/Layout"
    android:background="@color/primary"
    android:padding="@dimen/dp50">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo_login"
        android:layout_marginTop="@dimen/dp10"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#CA2020"
        android:textSize="@dimen/sp13"
        />
    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/user"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/quaternary"
        android:textSize="@dimen/sp16"
        />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:autofillHints="name"
        android:background="@drawable/inputs_login"
        android:fontFamily="@font/roboto_light_italic"
        android:inputType="text"
        android:labelFor="@id/input_user"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/sp12"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_user"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateSpeakableTextCheck,EditableContentDescCheck,EditableContentDescCheck" />
    <TextView
        android:id="@+id/text_errorp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="@dimen/sp13"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#A52020"
        />

    <TextView
        android:id="@+id/text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/password"
        android:textSize="@dimen/sp16"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/quaternary"
        />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/inputs_login"
        android:textSize="@dimen/sp18"
        android:labelFor="@id/input_pass"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light_italic"
        android:textColor="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pass"
        tools:ignore="SpeakableTextPresentCheck"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/txt_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light_italic"
        android:paddingTop="@dimen/dp4"
        android:text="@string/forget"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/sp13"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_pass"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp16"
        android:background="@drawable/button_principal"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_forget"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_opcions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp35"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/option_login"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/btns_apps"
        android:layout_width="@dimen/dp264"
        android:layout_height="@dimen/dp70"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txt_opcions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/dp25"
        android:paddingStart="@dimen/dp25"
        android:paddingTop="@dimen/dp10"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_apple"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_icon_ios"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="@dimen/dp8"
            android:background="@drawable/btn_icon_fb"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_icon_google"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp14"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/sp15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btns_apps"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/secondary"
        android:textSize="@dimen/sp15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_noAccount"
        app:layout_constraintTop_toBottomOf="@id/btns_apps"
        android:layout_marginTop="@dimen/dp14"
        />
    <TextView
        android:id="@+id/txt_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_noAccount"
        android:text="@string/guest"
        android:gravity="center"
        android:textSize="@dimen/sp16"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/dp10"
        android:textColor="@color/secondary"/>


</androidx.constraintlayout.widget.ConstraintLayout>