<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/Layout"
    android:background="@color/primary"
    android:padding="50dp">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo_login"
        android:layout_marginTop="@dimen/main_activity_margin_top"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="300dp"
        android:layout_height="@dimen/main_activity_height_txtv"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#CA2020"
        android:textSize="13sp"
        />
    <TextView
        android:id="@+id/txt_user"
        android:layout_width="100dp"
        android:layout_height="@dimen/main_activity_height_txtv"
        app:layout_constraintTop_toBottomOf="@id/txt_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/user"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/quaternary"
        android:textSize="@dimen/main_activity_txt_size"
        />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_height_input_btn"
        android:autofillHints="name"
        android:background="@drawable/inputs_login"
        android:fontFamily="@font/roboto_light_italic"
        android:inputType="text"
        android:labelFor="@id/input_user"
        android:textColor="@color/tertiary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_user"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateSpeakableTextCheck,EditableContentDescCheck,EditableContentDescCheck" />
    <TextView
        android:id="@+id/text_errorp"
        android:layout_width="300dp"
        android:layout_height="@dimen/main_activity_height_txtv"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#A52020"
        />

    <TextView
        android:id="@+id/text_pass"
        android:layout_width="150dp"
        android:layout_height="@dimen/main_activity_height_txtv"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/password"
        android:textSize="@dimen/main_activity_txt_size"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/quaternary"
        />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_height_input_btn"
        android:background="@drawable/inputs_login"
        android:textSize="18sp"
        android:labelFor="@id/input_pass"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light_italic"
        android:textColor="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pass"
        tools:ignore="SpeakableTextPresentCheck"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/txt_forget"
        android:layout_width="200dp"
        android:layout_height="@dimen/main_activity_height_txtv"
        android:fontFamily="@font/roboto_light_italic"
        android:paddingTop="4dp"
        android:text="@string/forget"
        android:textColor="@color/tertiary"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_pass"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_height_input_btn"
        android:layout_marginTop="@dimen/main_activity_margin_top_btn"
        android:background="@drawable/button_principal"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_forget"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_opcions"
        android:layout_width="@dimen/main_txtV_width_options_login"
        android:layout_height="@dimen/main_txtV_height_options_login"
        android:layout_marginTop="@dimen/main_margin_top_options_login"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/option_login"
        android:textColor="@color/tertiary"
        android:textSize="@dimen/main_activity_txt_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/btns_apps"
        android:layout_width="@dimen/main_linearL_width_264dp"
        android:layout_height="@dimen/main_linearL_height_70dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="444dp"
        app:layout_constraintTop_toBottomOf="@id/txt_opcions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/main_padding_25dp"
        android:paddingStart="@dimen/main_padding_25dp"
        android:paddingTop="@dimen/main_activity_margin_top"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_apple"
            android:layout_width="@dimen/main_btn_options_50dp"
            android:layout_height="@dimen/main_btn_options_50dp"
            android:layout_margin="@dimen/main_btn_margin_15dp"
            android:background="@drawable/btn_icon_ios"
            tools:ignore="SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="@dimen/main_btn_options_50dp"
            android:layout_height="@dimen/main_btn_options_50dp"
            android:layout_margin="8dp"
            android:background="@drawable/btn_icon_fb"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="@dimen/main_btn_options_50dp"
            android:layout_height="@dimen/main_btn_options_50dp"
            android:layout_margin="@dimen/main_btn_margin_15dp"
            android:background="@drawable/btn_icon_google"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_noAccount"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/tertiary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btns_apps"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:fontFamily="@font/roboto_light_italic"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_noAccount"
        app:layout_constraintTop_toBottomOf="@id/btns_apps"
        android:layout_marginTop="14dp"
        />
    <TextView
        android:id="@+id/txt_guest"
        android:layout_width="200dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_noAccount"
        android:text="@string/guest"
        android:gravity="center"
        android:textSize="@dimen/main_activity_txt_size"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/secondary"/>


</androidx.constraintlayout.widget.ConstraintLayout>